--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import "./_normalize.css";
 @import "./_variables.scss";
 @import "./_mixins.scss";
+@import "../assets/fonts/fonts.css";
 
 @import "./modules/body.scss";
 @import "./modules/header.scss";
